changed color and name

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
    <header>
-      <h1>Jada Russell</h1>
+      <h1>Student Name</h1>
         <nav>
             <ul>
                 <li>HOME</li>
