--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
         <p>Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
     </div>
 </div>
-    <div class="skills">
-        <h2 id="skills" >SKILLS</h2>
+     <h2 class="skills" id="skills" >SKILLS</h2>
+    
      <div class="html">
         
         <img src="images/portfolio-1.png" alt="basic screen" class="image">
@@ -97,7 +97,7 @@
    
    <nav>
        <ul  class="footer-nav">
-        <li><a id="#" href="#">HOME</a></li>
+        <li><a href="#">HOME</a></li>
          <li><a href="#portfolio">PORTFOLIO</a></li> 
          <li><a href="#contact">CONTACT</a></li>
          <li><a href="#skills">SKILLS</a></li>
